<resources>
    <string name="app_name">Food Order</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_up"><u>Don\'t have a account?Sign up now</u></string>
    <string name="preference_file_name">Restaurant preference</string>
    <string name="name">Name</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="message">Enter your registered mobile number and email address below:</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome!</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_ordering">Food Ordering</string>
    <string name="mobile_number_10_digits">Mobile Number(10 Digits)</string>
    <string name="email_address">Email Address</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="password">Password</string>
    <string name="enter_name">Name (Min. 3 Characters)</string>
    <string name="choose_password">Password (Min. 4 Characters)</string>
    <string name="enter_the_received_otp_below">Enter the received OTP below:</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="submit">Submit</string>
    <string name="sort">Sort</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="you_do_not_have_any_fav_restaurant">You do not have any fav restaurant!!</string>
    <string name="phone_no">Phone No</string>
    <string name="no">No.</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="name_of_food">Name of food</string>
    <string name="name_of_the_food">Name of the Food</string>
    <string name="_300_person">300/person</string>
    <string name="choose_from_the_menu_below">Choose from menu listed below: </string>
    <string name="proceed_to_cart">Proceed To Cart</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="name_of_restaurant">Name Of Restaurant</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!!!</string>
    <string name="done">Done</string>
    <string name="you_do_not_any_order_history">You do not have any order history!!</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="date_of_order">Date Of Order</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below: </string>
    <string name="rs_400">Rs. 400</string>
    <string name="mail_us_at">Mail Us At</string>
</resources>
