<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo"/>
    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/enter_the_received_otp_below"/>

    <EditText
        android:id="@+id/etOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:layout_margin="10dp"
        android:background="@drawable/text_boundary_background"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etOTP"
        android:layout_margin="10dp"
        android:background="@drawable/text_boundary_background"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEnterPassword"
        android:layout_margin="10dp"
        android:background="@drawable/text_boundary_background"
        android:hint="@string/confirm_password"
        android:inputType="textPassword|textVisiblePassword"
        android:maxLines="1"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

</RelativeLayout>