<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/rlcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/no"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFoodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/txtNo"
            android:text="@string/name_of_food"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFoodName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/txtNo"
            android:text="@string/price"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:visibility="visible"/>

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:background="@color/colorAccent"
            android:padding="4dp"
            android:text="@string/remove"
            android:textColor="@android:color/white"
            android:visibility="gone"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>