<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlRegister"
            android:background="@color/colorPrimary">

            <!--This is how you can include another layout
            inside a layout file. We might need toolbar again
            and again inside our project, so we just made one separate
            layout file and then use it inside any layout file using the
            include tag-->
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="12dip"
                android:background="@drawable/text_boundary_background"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:hint="@string/enter_name"
                android:padding="10dip"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:background="@drawable/text_boundary_background"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etEmailAddress"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:maxLength="10"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number_10_digits"
                android:inputType="phone"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etDelivery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etMobile"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:gravity="top"
                android:drawableStart="@drawable/ic_location"
                android:drawablePadding="3dp"
                android:hint="@string/delivery_address"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etEnterPassword"
                android:layout_width="match_parent"
                android:background="@drawable/text_boundary_background"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etDelivery"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:hint="@string/choose_password"
                android:inputType="textPassword"
                android:padding="10dip"
                android:maxLength="6"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:layout_below="@+id/etEnterPassword"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:hint="@string/confirm_password"
                android:inputType="textPassword|textVisiblePassword"
                android:padding="10dip"
                android:singleLine="true"
                android:maxLength="6"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="40dip"
                android:layout_marginRight="12dip"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>