<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CartActivity">

    <RelativeLayout
        android:id="@+id/rlCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/rlNameOfRestaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtOrderingFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordering_from"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/txtNameOfRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_of_restaurant"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@id/txtOrderingFrom"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtNameOfRestaurant"
            android:background="@android:color/holo_red_light"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_above="@+id/btnPlaceOrder"
        android:layout_below="@+id/rlNameOfRestaurant"
        android:padding="5dp" />

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/place_order"
        android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>